--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="navbar" class="navibar">
         <a href="#home" class="active">Home</a>
         <a href="#About">About</a>
-        <a href="https://youtube.com/deaafrizal">Youtube</a>
+        <a href="https://youtube.com/">Youtube</a>
         <a href="javascript:void(0);" class="icon" onclick="showMobileNav()">
             <i class="fa fa-bars"></i>
         </a>
